# scarlet

./: .gitignore  CMakeLists.txt  Makefile  README.md  Untitled Diagram.drawio  bitwise_int_min.s  bro.c  changes.txt  end_before_expr.scp  expected_results.json  extra_junk.scp  format.sh  go.mod  main.go  nested_ops.s  nested_ops_2.s  not_expression.scp  numloc.py  parens_3.s  run.sh  setup_hooks.sh  space_in_keyword.scp  test_properties.json
.github/workflows/: MACOS_DEBUG_stress_test_clang.yml  MACOS_DEBUG_test_clang.yml  MACOS_RELEASE_stress_test_clang.yml  MACOS_RELEASE_test_clang.yml  MACOS_stress_test_clang.yml  MACOS_test_clang.yml  MACOS_test_gcc.yml  UBUNTU_DEBUG_stress_test_clang.yml  UBUNTU_DEBUG_stress_test_gcc.yml  UBUNTU_DEBUG_test_clang.yml  UBUNTU_DEBUG_test_extra.yml  UBUNTU_DEBUG_test_extra_gcc.yml  UBUNTU_DEBUG_test_gcc.yml  UBUNTU_RELEASE_stress_test_clang.yml  UBUNTU_RELEASE_stress_test_gcc.yml  UBUNTU_RELEASE_test_clang.yml  UBUNTU_RELEASE_test_extra_clang.yml  UBUNTU_RELEASE_test_extra_gcc.yml  UBUNTU_RELEASE_test_gcc.yml  UBUNTU_stress_test_clang.yml  UBUNTU_stress_test_gcc.yml  UBUNTU_test_clang.yml  UBUNTU_test_gcc.yml  VALGRIND_DEBUG_ubuntu_clang.yml  VALGRIND_DEBUG_ubuntu_gcc.yml  VALGRIND_RELEASE_ubuntu_clang.yml  VALGRIND_RELEASE_ubuntu_gcc.yml  VALGRIND_ubuntu_clang.yml  VALGRIND_ubuntu_gcc.yml  cmake-multi-platform.yml  format.yml  test.yml  test_clang.yml  test_gcc.yml  unit-test.yml
.github/workflows/DEBUG/: MACOS_DEBUG_stress_test_clang.yml  VALGRIND_DEBUG_ubuntu_clang.yml
.github/workflows/RELEASE/: UBUNTU_RELEASE_test_clang.yml
MoM/: MoM.txt
ast/: CMakeLists.txt  ast.cc  ast.hh  elemType.hh
binary_operations/: CMakeLists.txt  binop.cc  binop.hh
cmd/: cmd.hh
codegen/: CMakeLists.txt  codegen.cc  codegen.hh  common.hh  scasm.hh
codegen/cfg/: cfg.hh
codegen/opt/: constant_folding.cc  copy_propagation.cc  dead_store_elimination.cc  opt.cc  unreachable_code_elimination.cc
codegen/regalloc/: regalloc.hh
codegen/scargen/: pla  pretty_print.cc  scar.cc  scar_block.cc  scar_declaration.cc  scar_expression.cc  scar_factor.cc  scar_statement.cc
codegen/scasmgen/: binop_scasm_generation.cc  fix_instructions.cc  fix_pseudo_registers.cc  funcall_scasm_generation.cc  register_allocator.cc  scasm_generation.cc  type_cast_scasm_generation.cc  unop_scasm_generation.cc
driver/: driver.cc
games/: chess.sc  pacman.sc  snake.sc  snek.c
githooks/: pre-commit
lexer/: CMakeLists.txt  lexer.cc  lexer.go  lexer.hh  lexer_test.go  re.hh  regex.cc  regex.hh
parser/: CMakeLists.txt  common.hh  parse_binop.cc  parse_block.cc  parse_constants.cc  parse_declaration.cc  parse_expression.cc  parse_function.cc  parse_statement.cc  parse_unop.cc  parser.cc  parser.hh
parser/pretty_print/: pretty_print_block.cc  pretty_print_declaration.cc  pretty_print_expression.cc  pretty_print_statement.cc
parser/semantic_analysis/: analyze_block.cc  analyze_case_exp.cc  analyze_declaration.cc  analyze_expression.cc  analyze_function_declaration.cc  analyze_statement.cc  analyze_struct_declaration.cc  analyze_variable_declaration.cc  pla.s
regex/: CMakeLists.txt  regex.cc  regex.hh
regex/ast/: ast.cc  ast.hh
regex/lexer/: lexer.cc  lexer.hh
regex/parser/: parser.cc  parser.hh
regex/regex/: regex.cc  regex.hh
regex/tokens/: tokens.cc  tokens.hh
regex_engine/ast/: ast.cc  ast.hh
regex_engine/lexer/: lexer.cc  lexer.hh
regex_engine/parser/: parser.cc  parser.hh
regex_engine/regex/: match.hh  regex.cc  regex.hh
regex_engine/tokens/: tokens.cc  tokens.hh
repl/: repl.go
resources/: C++20.md
scar/: CMakeLists.txt  scar.cc  scar.hh  unop.hh
scasm/: CMakeLists.txt  scasm.cc  scasm.hh
src/lexer/: lexer.cc  lexer.hh
src/parser/: parser.cc  parser.hh
src/regex/: match.hh
src/tokens/: tokens.cc  tokens.hh
stress/: check_memory_leaks.sh  stress_test.sh
stress/tests/: bro.c  test1.c  test2.c  test3.c  test4  test4.c  test5.c  test6.c  test7.c
test_extra/: extra_test.sh
test_extra/tests/: test1.c  test2.c
test_framework/: basic.py  clean.sh  regalloc.py  runner.py
test_framework/tacky/: common.py
tests/chapter_10/valid/: tempCodeRunnerFile.c  type_before_storage_class.c
tests/chapter_11/valid/long_expressions/: type_specifiers.c
tests/chapter_12/valid/implicit_casts/: common_type.c
tests/chapter_12/valid/type_specifiers/: signed_type_specifiers.c  unsigned_type_specifiers.c
tests/chapter_13/valid/extra_credit/: incr_and_decr.c  nan.c
tests/chapter_13/valid/special_values/: infinity.c
tests/chapter_14/valid/declarators/: declarators.c
tests/chapter_15/valid/declarators/: big_array.c
tests/chapter_15/valid/extra_credit/: compound_assign_and_increment.c  compound_assign_to_subscripted_val.c  incr_decr_subscripted_vals.c  postfix_prefix_precedence.c
tests/chapter_15/valid/subscripting/: simple_subscripts.c
tests/chapter_16/invalid_types/: char_and_schar_conflict.c  implicit_conversion_between_char_pointers.c  string_literal_is_plain_char_pointer.c  string_literal_is_plain_char_pointer_static.c
tests/chapter_16/valid/char_constants/: control_characters.c
tests/chapter_16/valid/chars/: integer_promotion.c  type_specifiers.c
tests/chapter_16/valid/extra_credit/: compound_bitwise_ops_chars.c
tests/chapter_16/valid/strings_as_initializers/: array_init_special_chars.c
tests/chapter_16/valid/strings_as_lvalues/: string_special_characters.c
tests/chapter_17/valid/sizeof/: sizeof_consts.c
tests/chapter_17/valid/void_pointer/: array_of_pointers_to_void.c  common_pointer_type.c  conversion_by_assignment.c
tests/chapter_19/constant_folding/all_types/: fold_long.c  fold_ulong.c
tests/chapter_5/valid/: paranthesis_assignment.c
tests/chapter_8/valid/: do_until.c  until.c
token/: CMakeLists.txt  token.cc  token.go  token.hh
tools/color/: color.hh
tools/constant/: constant.hh
tools/macros/: macros.hh
tools/symbolTable/: symbolTable.hh
unary_operations/: CMakeLists.txt  unop.cc  unop.hh
valgrind/: check_memory_leaks.sh
valgrind/tests/: test1.sc  test2.sc  test3.sc  test4.sc
(+10 files in other folders)
